# ta-ast-api

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: check.yaml
backend/: Dockerfile  pyproject.toml  tox.ini
backend/.github/workflows/: check.yaml
backend/app/: main.py
backend/app/api/endpoints/: hotels.py  main.py  services.py
backend/app/database/: crud.py  database.py  main.py  models.py
backend/tests/services/: test_services.py
frontend/: Dockerfile
frontend/src/: App.js
frontend/src/components/: HotelSearch.js
frontend/src/services/: api.js
