[tool.poetry]
name = "ta-ast-api"
version = "0.1.0"
description = "Technical Test Software Engineer Athlos"
authors = ["Renato Silva <renatoramossilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
playwright = "^1.49.0"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
