[tool.poetry]
name = "ta-ast-api"
version = "0.1.0"
description = "Technical Test Software Engineer Athlos"
authors = ["Renato Silva <renatoramossilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.6"
playwright = "^1.49.0"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
black = "^24.10.0"
pylint = "^3.3.2"
isort = "^5.13.2"
mypy = "^1.13.0"
tox = "^4.23.2"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = ["app"]
line_length = 88
